# challenges

postgresql-slow-delete/: README.md  create-fixtures.py  database.sql  docker-compose.yml
python-apispec-marshmallow/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
python-apispec-marshmallow/challenge/: __init__.py
