[tool.poetry]
name = "challenge"
version = "0.1.0"
description = ""
authors = ["Julien Castets <castets.j@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
marshmallow = "^3.8.0"
apispec-webframeworks = "^0.5.2"
PyYAML = "^5.3.1"
Flask-Cors = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
